traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x = getMondeLargeur()
  var y = getMondeLongueur()
  var a = getX()
  var b = getY()
  var cpt = 0
  var lin = 0
  var col = 0
 do {
 ecritMessage(cpt)
 setPos(lin, col)  
 x +=1  
 cpt += 1
 
   
   if (x == 6){
     x = 0
     y +=1
   }
 }while (a!=x && b!=y)
 ecritMessage(cpt+1)
}